--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue3-vite-tailwind-dashboard",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -13,10 +14,10 @@
     "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.10",
+    "postcss": "^8.2.12",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.1.3",
-    "vite": "^2.1.5",
+    "vite": "^2.2.1",
     "vue-tsc": "^0.0.24"
   }
 }
